[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "ultra-cache"
version = "0.0.0"
description = "Simple and extensible caching for FastAPI requests"
authors = ["Jegor Kitskerkin <jegor.kitskerkin@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jegork/ultra-cache"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pydantic = "^2.7.1"
dict-hash = "^1.1.37"
redis = {extras = ["hiredis"], version = "^5.0.5", optional = true}


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.4.2"
pyright = "^1.1.361"
freezegun = "^1.5.0"
pytest-mock = "^3.14.0"
httpx = "^0.27.0"
fakeredis = "^2.23.2"

[tool.poetry.extras]
redis = ["redis"]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
